# notel

./: README.md
go/: context.go  go.mod  go.sum  telemetry-writer.go
go/cmd/demo/: main.go
rust-server/: .gitignore  Cargo.toml  POSTGRES.adoc  README.adoc  justfile  proposed-schema.sql  sample.json
rust-server/schemas/: duckdb.sql
rust-server/sql/: duckdb-json-files-tables.sql  duckdb-json-files-views.sql  duckdb.sql  json-files-to-duckdb-tables.sql  postgres.sql  sqlite-events-to-json-files  sqlite.sql
rust-server/src/: conn.rs  main.rs  stream_Id.rs  tests.rs
rust-server/src/conn/: local.rs  mod.rs  openers.rs  postgres.rs
