[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
futures = "0.3.30"
rusqlite = "0.31.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io", "io-util"] }
tracing = "0.1.40"
