[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws"] }
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
duckdb = { version = "1.0.0", features = ["json", "serde_json"] }
env_logger = "0.11.3"
futures = "0.3.30"
http-serde = "2.1.1"
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io", "io-util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
